--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "gcs-match-setup-server",
   "version": "0.0.1",
-  "main": "index.js",
+  "main": "./src/index.js",
   "author": "Qvazar <sj@invokit.dk>",
   "license": "MIT",
   "scripts": {
     "start": "node ./index.js",
-    "dev": "mocha --growl --watch --harmony ./**/*.test.js",
-    "test": "mocha --harmony ./**/*.test.js",
+    "dev": "NODE_ENV=TEST mocha --growl --watch --harmony $(find ./src -name *.test.js)",
+    "test": "mocha --harmony $(find ./src -name *.test.js)",
     "debug": "NODE_ENV=debug STEAM_REALM=http://localhost STEAM_KEY=9847B788F2BF89196983C546D3ECAC14 node ./index.js"
   },
   "engines": {
@@ -15,7 +15,7 @@
   },
   "dependencies": {
     "@google-cloud/datastore": "^0.7.1",
-    "base-64": "^0.1.0",
+    "body-parser": "^1.17.1",
     "bunyan": "^1.8.8",
     "cors": "^2.8.1",
     "express": "^4.15.2",
@@ -23,14 +23,14 @@
     "lodash": "^4.17.4",
     "passport": "^0.3.2",
     "passport-jwt": "^2.2.1",
-    "passport-restify": "^1.0.1",
     "passport-steam": "^1.0.8",
     "pug": "^2.0.0-beta11",
-    "restify": "^4.3.0",
     "uuid": "^3.0.1"
   },
   "devDependencies": {
+    "base-64": "^0.1.0",
     "chai": "^3.5.0",
-    "mocha": "^3.2.0"
+    "mocha": "^3.2.0",
+    "sinon": "^2.0.0"
   }
 }
