--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gcs-match-setup-server",
+  "name": "battle-planner-server",
   "version": "0.0.1",
   "main": "./src/index.js",
   "author": "Qvazar <sj@invokit.dk>",
@@ -8,7 +8,7 @@
     "start": "node ./src/index.js",
     "dev": "NODE_ENV=TEST mocha --growl --watch --harmony $(find ./src -name *.test.js)",
     "test": "mocha --harmony $(find ./src -name *.test.js)",
-    "debug": "NODE_ENV=debug STEAM_REALM=battleplanner-162115.appspot.com STEAM_KEY=758275E6152418D20FFD77BE0317006D PROJECT_ID=battleplanner-162115 REPLAY_BUCKET_NAME=replays-battleplanner-dev node ./src/index.js"
+    "debug": "NODE_ENV=debug STEAM_REALM=http://localhost:8080/ STEAM_KEY=3B744B4BC6D71C4AF0358BA3DBD39A6B PROJECT_ID=battleplanner-162115 REPLAY_BUCKET_NAME=replays-battleplanner-dev node ./src/index.js"
   },
   "engines": {
     "node": "6.10.0"
@@ -22,6 +22,7 @@
     "google-cloud": "^0.49.0",
     "jsonwebtoken": "^7.3.0",
     "lodash": "^4.17.4",
+    "moment": "^2.18.0",
     "passport": "^0.3.2",
     "passport-jwt": "^2.2.1",
     "passport-steam": "^1.0.8",
