--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "node": "7.7.2"
   },
   "dependencies": {
+    "async": "^2.1.5",
     "aws-sdk": "^2.29.0",
     "body-parser": "^1.17.1",
     "bunyan": "^1.8.8",
