--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "cors": "^2.8.1",
     "express": "^4.15.2",
     "fast-crc32c": "^1.0.4",
+    "http-status": "^1.0.1",
     "jsonwebtoken": "^7.3.0",
     "lodash": "^4.17.4",
     "moment": "^2.18.0",
