--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "bunyan": "^1.8.8",
     "cors": "^2.8.1",
     "express": "^4.15.2",
+    "express-ws": "^3.0.0",
     "fast-crc32c": "^1.0.4",
     "http-status": "^1.0.1",
+    "immutable": "^3.8.1",
     "jsonwebtoken": "^7.3.0",
     "lodash": "^4.17.4",
     "moment": "^2.18.0",
