--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "async": "^2.1.5",
     "aws-sdk": "^2.29.0",
     "body-parser": "^1.17.1",
+    "bufferutil": "^3.0.0",
     "bunyan": "^1.8.8",
     "cors": "^2.8.1",
     "express": "^4.15.2",
@@ -29,6 +30,7 @@
     "passport-jwt": "^2.2.1",
     "passport-steam": "^1.0.8",
     "pug": "^2.0.0-beta11",
+    "utf-8-validate": "^3.0.1",
     "uuid": "^3.0.1"
   },
   "devDependencies": {
