--- a/package.json
+++ b/package.json
@@ -15,22 +15,22 @@
   },
   "dependencies": {
     "async": "^2.1.5",
-    "aws-sdk": "^2.29.0",
+    "aws-sdk": "^2.222.1",
     "body-parser": "^1.17.1",
-    "bufferutil": "^3.0.0",
+    "bufferutil": "^3.0.4",
     "bunyan": "^1.8.8",
     "cors": "^2.8.1",
-    "express": "^4.15.2",
+    "express": "^4.16.3",
     "express-ws": "^3.0.0",
     "fast-crc32c": "^1.0.4",
     "http-status": "^1.0.1",
     "jsonwebtoken": "^7.3.0",
-    "lodash": "^4.17.4",
-    "moment": "^2.18.0",
+    "lodash": "^4.17.5",
+    "moment": "^2.22.0",
     "passport": "^0.3.2",
     "passport-jwt": "^2.2.1",
-    "passport-steam": "^1.0.8",
-    "pug": "^2.0.0-beta11",
+    "passport-steam": "^1.0.9",
+    "pug": "^2.0.3",
     "utf-8-validate": "^3.0.1",
     "uuid": "^3.0.1"
   },
